# superbrowser

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
browser/: browser.py
src/superbrowser/: browser.py
tests/: test_browser.py
