[metadata]
name = superbrowser
version = 0.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = selenium browser with extended functionality
description-file = README.md 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quintenroets/superbrowser
license = MIT

[options]
packages = find:
python_requires = >=3.10
package_dir =
    = .
install_requires =
    selenium
    quinten-cli
    superpathlib

[options.packages.find]
where = .

[bdist_wheel]
universal = true
